--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "svg-captcha": "^1.3.11"
   },
   "devDependencies": {},
